[gd_scene load_steps=3 format=3 uid="uid://dsgsojm0bvw6m"]

[ext_resource type="Script" path="res://FlappyBird/FlappyBirdMainMenu.gd" id="1_xglml"]
[ext_resource type="Theme" uid="uid://byjr60i0v16n3" path="res://FlappyBird/FlappyTheme.tres" id="2_5exv0"]

[node name="FlappyBirdMainMenu" type="Node2D"]
script = ExtResource("1_xglml")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 1.0
offset_right = 96.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2

[node name="PlayGame" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5exv0")
text = "Play Game"

[node name="Difficulty" type="OptionButton" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_5exv0")
item_count = 4
selected = 3
popup/item_0/text = "First"
popup/item_0/id = 0
popup/item_1/text = "Second"
popup/item_1/id = 1
popup/item_2/text = "Third"
popup/item_2/id = 2
popup/item_3/text = "Select Difficulty"
popup/item_3/id = 3

[node name="TutorialButton" type="MenuButton" parent="UI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5exv0")
text = "Tutorial"
flat = false
item_count = 4
popup/item_0/text = "Space - Jump"
popup/item_0/id = 0
popup/item_1/text = "D - Dash"
popup/item_1/id = 1
popup/item_2/text = "R - Reset"
popup/item_2/id = 2
popup/item_3/text = "Esc - Quit to Main Menu"
popup/item_3/id = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 79.0
offset_right = 20.0
offset_bottom = 119.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI/AspectRatioContainer"]
layout_mode = 2
theme = ExtResource("2_5exv0")
text = "O w O
Flappy Madness"
horizontal_alignment = 1

[node name="BackgroundSprites" type="Node2D" parent="."]

[connection signal="pressed" from="UI/VBoxContainer/PlayGame" to="." method="_on_play_game_pressed"]
[connection signal="item_selected" from="UI/VBoxContainer/Difficulty" to="." method="_on_difficulty_item_selected"]
